src/objects/HL_Community_Activity__c.object
<CustomObject>
    <fields>
        <fullName>Activity_Date__c</fullName>
        <label>Activity Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Activity_Type__c</fullName>
        <label>Activity Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>HL Community Activities</relationshipLabel>
        <relationshipName>HL_Community_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>HL Community Activity</label>
    <nameField>
        <displayFormat>CA-{00000000}</displayFormat>
        <label>HL Community Activity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HL Community Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>